--- a/css/Desktop.css
+++ b/css/Desktop.css
@@ -7,6 +7,11 @@
 .burgerMenu, .mobH1{
 	display:none;
 }
+
+header {
+    height: 100vh;
+}
+
 header nav ul li h1{
 	display:block;
 	padding:0;
@@ -31,7 +36,7 @@ header nav ul li h1{
 
 nav {
     display: block;
-    background-color: #111;
+    background-color: #1d1f20;
 }
 
 nav ul {
@@ -55,7 +60,7 @@ nav ul li {
 	border: none;
 	padding: 5px 10px;
 	transition: 0.7s;
-	background-color: #111;
+	background-color: #1d1f20;
     border-bottom: 3px solid rgba(0, 0, 0, 0);	
     width: auto;
 }
