--- a/css/scss.css
+++ b/css/scss.css
@@ -1,12 +1,12 @@
 body {
   background-color: #1d1f20; }
 
-.hero {
+.BannerCont {
   position: relative;
   background-image: url(../Images/BannerScrollBW.png);
   background-size: cover;
   background-position: bottom center; }
-  .hero-grad {
+  .BannerCont-grad {
     position: absolute;
     top: 0;
     left: 0;
@@ -14,21 +14,21 @@ body {
     height: 100%;
     background-image: linear-gradient(90deg, rgba(253, 187, 45, 0.8) 0%, rgba(58, 28, 113, 0.67) 100%);
     z-index: 0; }
-  .hero-diagonal {
+  .BannerCont-diagonal {
     position: absolute;
     bottom: -0.5px;
     width: 100%;
     height: 12vw;
     z-index: 2;
     fill: #1d1f20; }
-  .hero-content {
+  .BannerCont-content {
     position: relative;
     padding: 60px;
     padding-top: 5vw;
     padding-bottom: 10vw;
     z-index: 1;
     text-align: center; }
-    .hero-content .heading {
+    .BannerCont-content .heading {
       font-size: 40px;
       max-width: 700px;
       font-weight: 100;
@@ -38,14 +38,14 @@ body {
       letter-spacing: 8px;
       text-transform: uppercase;
       margin-bottom: 60px; }
-  .hero-scroll {
+  .BannerCont-scroll {
     width: 40px;
     height: 70px;
     box-shadow: inset 0 0 0 1px #1d1f20;
     border-radius: 25px;
     position: relative;
     display: inline-block; }
-    .hero-scroll:before {
+    .BannerCont-scroll:before {
       content: '';
       width: 8px;
       height: 8px;
