--- a/css/scss.css
+++ b/css/scss.css
@@ -23,28 +23,17 @@ body {
     fill: #1d1f20; }
   .BannerCont-content {
     position: relative;
-    padding: 60px;
-    padding-top: 5vw;
-    padding-bottom: 10vw;
+    padding: 2vh 15px 7.2vw 15px;
     z-index: 1;
     text-align: center; }
-    .BannerCont-content .heading {
-      font-size: 40px;
-      max-width: 700px;
-      font-weight: 100;
-      margin: 0 auto;
-      color: #1d1f20;
-      line-height: 1.5;
-      letter-spacing: 8px;
-      text-transform: uppercase;
-      margin-bottom: 60px; }
   .BannerCont-scroll {
     width: 40px;
     height: 70px;
     box-shadow: inset 0 0 0 1px #1d1f20;
     border-radius: 25px;
     position: relative;
-    display: inline-block; }
+    display: inline-block;
+    margin-top: 2vh; }
     .BannerCont-scroll:before {
       content: '';
       width: 8px;
