--- a/css/scss.css
+++ b/css/scss.css
@@ -20,7 +20,7 @@ body {
     width: 100%;
     height: 12vw;
     z-index: 2;
-    fill: #1d1f20; }
+    fill: #fcfcfc; }
   .BannerCont-content {
     position: relative;
     padding: 2vh 15px 7.2vw 15px;
