--- a/scss/scss.scss
+++ b/scss/scss.scss
@@ -24,7 +24,7 @@
         width: 100%;
         height: 12vw;
         z-index: 2;
-        fill: $bg;
+        fill: #fcfcfc;
       }
       &-content{
         position: relative;
