added all JS side validation for the form and removed error logic from the PHP file

--- a/css/Desktop.css
+++ b/css/Desktop.css
@@ -406,3 +406,12 @@ nav ul li:first-child {
 #contactPopup:hover {
 	cursor: pointer;
 }
+
+#sendMessage {
+	transition: 0.5s;
+	cursor: pointer;
+}
+
+#sendMessage:hover {
+	background-color: #1d1f20;
+}
