added functionality for the popout contact me page

--- a/css/Desktop.css
+++ b/css/Desktop.css
@@ -400,7 +400,8 @@ nav ul li:first-child {
 }
 
 #contactPopupForm {
-	max-width: 30%;;
+	max-width: 30%;
+	min-width: 30%;
 }
 
 #contactPopup:hover {
