--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ h1 {
     font-size: 2rem;
     margin: 0px;
     padding: 20px 0px 10px 0px;
-    color: black;
+    color: #d8670d;
     flex-basis: 100%;
 }
 
@@ -82,6 +82,7 @@ h1 {
 
 .subheader h1 {
     color: #fcfcfc;
+    text-shadow: 4px 4px black;
 }
 
 .footnote {
@@ -125,6 +126,7 @@ h1 {
 
 .text h3 {
     text-align: center;
+    color: #d8670d;
 }
 
 .recommendation .text {
@@ -255,6 +257,8 @@ blockquote:after {
     padding: 0 3em 0 3em;
     text-align:right;
     margin: 0.5em;
+    color: #d8670d;
+    font-weight: bold;
 }
 
 .cite cite:before {
@@ -277,6 +281,11 @@ blockquote:after {
 
 .projDesc h2 {
     margin-top: 0px;
+    color: #d8670d;
+}
+
+.projDesc p strong {
+    color: #d8670d;
 }
 
 .gitProjImg {
@@ -286,13 +295,15 @@ blockquote:after {
 
 .gitMsg {
     position: absolute;
-    bottom: 17%;
-    right: 24%;
+    top: 50%;
+    left: 50%;
+    transform: (translate(-50%, -50%));
     color: #fcfcfc;
     padding: 15px;
     transition: 0.5s;
     border-radius: 10px;
     background-color: #1d1f20;
+    margin: 0;
 }
 
 .gitProj {
@@ -302,6 +313,7 @@ blockquote:after {
 }
 
 .imgWrapper {
+    display: flex;
     position: relative;
     width: 100%;
 }
@@ -346,6 +358,7 @@ blockquote:after {
     margin:0;
     text-align: center;
     font-size: 1.4rem;
+    color: #d8670d;
 }
 
 .jobDesc p {
@@ -377,6 +390,15 @@ blockquote:after {
     margin:0;
     text-align: center;
     font-size: 1.4rem;
+    color: #d8670d;
+}
+
+.qualTitle h4.smallHeading {
+    font-size: 1rem;
+}
+
+.jobTitle h4.smallHeading {
+    font-size: 1rem;
 }
 
 .qualDesc {
@@ -391,6 +413,11 @@ blockquote:after {
 .qualDesc table{
     margin: 0 auto;
 	border-spacing: 30px 0px;
+}
+
+.qualDesc th {
+    color: #d8670d;
+    padding-bottom: 15px;
 }
 
 .tableCellCentre {
@@ -499,7 +526,11 @@ span.burgerMenu {
     width: 70%;
     height: 70%;
     margin-left: 17%;
-    
+    transition: 0.5s;
+}
+
+.codeLogo img:hover {
+    transform: scale(1.1);
 }
 
 .codeLogo {
@@ -530,10 +561,12 @@ nav ul {
 
 .footerlogo a img:hover {
     background-color: white;
+    transform: scale(1.1);
 }
 
 .companyLogo {
     display: none;
+    transition: 0.5s;
 }
 
 .BannerCont-content .heading {
@@ -541,10 +574,11 @@ nav ul {
     max-width: 700px;
     font-weight: 100;
     margin: 0 auto;
-    color: #1d1f20;
+    color: #fcfcfc;
     line-height: 1.5;
     letter-spacing: 1px;
     text-transform: uppercase;
+    text-shadow: 4px 4px black;
 }
 
 
@@ -593,6 +627,18 @@ nav ul {
     transform: rotate(45deg) translate(-6px, -8px) ;
 }
 
+#contactPopup.open {
+    background-color: #1d1f20;
+}
+
+.fa-comment-dots {
+    transition: 0.5s;
+}
+
+.BannerCont-scroll {
+    cursor: pointer;
+}
+
 #contactPopup {
     border-radius: 50%;
     width: 10vh;
@@ -602,6 +648,7 @@ nav ul {
     bottom: 30px;
     right: 30px;
     z-index: 4;
+    transition: 0.5s;
     -webkit-box-shadow: 4px 4px 20px 0px rgba(29,31,32,1);
     -moz-box-shadow: 4px 4px 20px 0px rgba(29,31,32,1);
     box-shadow: 4px 4px 20px 0px rgba(29,31,32,1);
