--- a/css/main.css
+++ b/css/main.css
@@ -703,3 +703,8 @@ nav ul {
     text-align: center;
     list-style-position: inside;
 }
+
+.centeredBullets > li {
+    padding: 7px 0;
+    margin-left: -32px;
+}
